--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vicious Cycles</title>
+    <style>
+        body {
+            background-color: #E7FBFB;
+        }
+        
+        h1 {
+            font-size: 4em;
+            text-align: center;
+            color: #010B5B;
+        }
+    </style>
 </head>
 <body>
-    <h>Vicious Cycles</h>
+    <h1>Vicious Cycles</h1>
 </body>
 </html>
